--- a/.github/workflows/download_data.yml
+++ b/.github/workflows/download_data.yml
@@ -1,80 +1,83 @@
 name: Daily JSON Download
 
 on:
-  # 定时触发器（北京时间每天12:00）
   schedule:
-    - cron: '0 5 * * *'  # UTC时间4:00 (北京时间12:00)
-
-  # 手动触发选项
+    - cron: '0 5 * * *'  # UTC 4:00 (北京时间12:00)
   workflow_dispatch:
+
+env:
+  # 集中管理JSON源列表（名称|URL）
+  JSON_SOURCES: >
+    stats|https://profile-content.hydev.org/content/generated/metas.json
+    users|https://profile-content.hydev.org/content/generated/friends/friends.json
+    events|https://profile-api.hydev.org/exports/hykilp/posts.json
+  DATA_DIR: './data'
 
 jobs:
   download-json:
     runs-on: ubuntu-latest
+    outputs:
+      json-updated: ${{ steps.collect-results.outputs.json-updated }}
+    
     steps:
-      # 1. 检出仓库代码
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          fetch-depth: 0  # 获取完整提交历史
 
-      # 2. 设置下载目录
-      - name: Prepare directory
+      - name: Setup directories
         run: |
           TODAY=$(date -u +'%Y-%m-%d')
-          mkdir -p "./data/$TODAY"
-          echo "DIR_PATH=./data/$TODAY" >> $GITHUB_ENV
-          echo "JSON_UPDATED=false" >> $GITHUB_ENV  # 初始化为false
-
-      # 3. 定义JSON源列表
-      - name: Setup JSON sources
-        id: set-json-sources
+          echo "DATE_TAG=$TODAY" >> $GITHUB_ENV
+          mkdir -p "$DATA_DIR/$TODAY"
+        
+      - name: Download JSON files
+        id: download
         run: |
-          sources="stats|https://profile-content.hydev.org/content/generated/metas.json
-users|https://profile-content.hydev.org/content/generated/friends/friends.json
-events|https://profile-api.hydev.org/exports/hykilp/posts.json"
-          echo "sources<<EOF" >> $GITHUB_OUTPUT
-          echo "$sources" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-        shell: bash
-
-      # 4. 循环下载所有JSON文件
-      - name: Download multiple JSONs
-        run: |
-          # 使用IFS处理多行输入
+          set -euo pipefail  # 启用严格错误检查
           IFS=$'\n'
-          for source in ${{ steps.set-json-sources.outputs.sources }}
-          do
-            # 拆分每行的name和url
-            name=$(echo "$source" | cut -d'|' -f1)
-            url=$(echo "$source" | cut -d'|' -f2)
+          any_updated=false
+          
+          for source in $JSON_SOURCES; do
+            name="${source%%|*}"
+            url="${source##*|}"
+            dir_path="$DATA_DIR/$DATE_TAG/$name"
             
-            echo "📥 Downloading $name.json from $url"
+            echo "📥 Downloading $name.json"
+            mkdir -p "$dir_path"
+            curl -sSfL "$url" -o "$dir_path/data.json"
             
-            # 创建子目录并下载
-            mkdir -p "$DIR_PATH/$name"
-            curl -sSf "$url" -o "$DIR_PATH/$name/data.json"
-            
-            # 验证JSON格式
-            if jq empty "$DIR_PATH/$name/data.json"; then
-              echo "✅ $name.json downloaded and validated"
-              echo "JSON_UPDATED=true" >> $GITHUB_ENV
+            if jq empty "$dir_path/data.json" >/dev/null 2>&1; then
+              echo "✅ Valid JSON: $name"
+              any_updated=true
             else
-              echo "❌ Invalid JSON format for $name.json"
+              echo "❌ Invalid JSON: $name" >&2
+              rm -f "$dir_path/data.json"
               exit 1
             fi
           done
+          
+          echo "json-updated=$any_updated" >> $GITHUB_OUTPUT
         env:
-          DIR_PATH: ${{ env.DIR_PATH }}
+          JSON_SOURCES: ${{ env.JSON_SOURCES }}
 
-      # 5. 提交更改（仅当有更新时）
-      - name: Commit changes
-        if: env.JSON_UPDATED == 'true'
+      - name: Collect results
+        id: collect-results
         run: |
-          git config user.name "GitHub JSON Downloader"
-          git config user.email "json-downloader@noreply.github.com"
-          git add ./data/
-          git commit -m "JSON data update: $(date -u +'%Y-%m-%d')"
-          git push origin main
+          echo "json-updated=${{ steps.download.outputs.json-updated }}" >> $GITHUB_OUTPUT
+
+      - name: Commit updates
+        if: ${{ steps.collect-results.outputs.json-updated == 'true' }}
+        run: |
+          git config user.name "Automated JSON Updater"
+          git config user.email "actions@users.noreply.github.com"
+          git add "$DATA_DIR"
+          
+          if git diff-index --quiet HEAD --; then
+            echo "🟢 No changes detected"
+          else
+            git commit -m "📊 JSON data update: ${{ env.DATE_TAG }}"
+            git push origin main
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
