--- a/.github/workflows/download_data.yml
+++ b/.github/workflows/download_data.yml
@@ -8,7 +8,7 @@ on:
 env:
   # 集中管理JSON源列表（名称|URL）
   JSON_SOURCES: >
-    stats|https://profile-content.hydev.org/content/generated/metas.json
+    stats|https://profile-api.hydev.org/exports/hykilp/posts.json
   DATA_DIR: './data'
 
 jobs:
